--- a/leeedohyun/build.gradle
+++ b/leeedohyun/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'io.rest-assured:rest-assured:5.4.0'
+	implementation 'com.google.guava:guava:33.0.0-jre'
 }
 
 tasks.named('test') {
