--- a/sungbin/mini/src/main/resources/application.yml
+++ b/sungbin/mini/src/main/resources/application.yml
@@ -23,6 +23,9 @@ spring:
         show_sql: true
         format_sql: true
     open-in-view: false
+logging:
+  level:
+    sql: trace
 ---
 spring:
   config:
