1단계 개발. 테스트코드 X

--- a/chaewon/.gitignore
+++ b/chaewon/.gitignore
@@ -26,6 +26,9 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+###properties fies###
+*.yml
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
