--- a/crispin/build.gradle
+++ b/crispin/build.gradle
@@ -19,9 +19,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    // ORM 사용을 위한 JPA 의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // 검증을 위한 Validation 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
     /**
      * H2 데이터베이스 의존성 추가
      * 미션진행 중 테스트와 개발에 모두 사용할 예정
