test: 특정 직원 근무기록 조회 테스트 개발 & refactor: 테스트 코드 리팩토링

--- a/sungbin/mini/src/test/resources/application.yml
+++ b/sungbin/mini/src/test/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     activate:
       on-profile: test
   datasource:
-    url: "jdbc:h2:mem:testdb"
+    url: "jdbc:h2:mem:commutedb"
     username: sa
     password:
     driver-class-name: org.h2.Driver
