--- a/crispin/build.gradle
+++ b/crispin/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.3'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'jacoco'
 }
 
 group = 'study'
@@ -11,6 +12,17 @@ java {
     sourceCompatibility = '17'
 }
 
+jacoco {
+    toolVersion = '0.8.11'
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        html.required = true
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -18,8 +30,23 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // ORM 사용을 위한 JPA 의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // 검증을 위한 Validation 의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // 테스트를 위한 API 요청을 위해 Rest Assured 의존성 추가
+    testImplementation 'io.rest-assured:rest-assured:5.4.0'
+    // 테스트 독립성을 위한 DB 초기화에 사용될 Guava 의존성 추가
+    implementation 'com.google.guava:guava:33.0.0-jre'
+    /**
+     * H2 데이터베이스 의존성 추가
+     * 미션진행 중 테스트와 개발에 모두 사용할 예정
+     */
+    runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
 }
