--- a/jokim/workHub/src/main/resources/application.yml
+++ b/jokim/workHub/src/main/resources/application.yml
@@ -1,16 +1,42 @@
-spring:
-  datasource:
-    url: "jdbc:mysql://localhost/library"
-    username: "root"
-    password: "rlaqudwh12!"
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: none
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    properties:
+  spring:
+    config:
+      activate:
+        on-profile: local
+    datasource:
+      url: jdbc:h2:mem:workhub;MODE=MYSQL
+      username: sa
+      password:
+      driver-class-name: org.h2.Driver
+    jpa:
       hibernate:
-        show_sql: true
-        format_sql: true
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        ddl-auto: create
+      properties:
+        hibernate:
+          show_sql: true
+          format_sql: true
+          dialect: org.hibernate.dialect.H2Dialect
+    h2:
+      console:
+        enabled: true
+        path: /h2-console
+
+---
+
+  spring:
+    config:
+      activate:
+        on-profile: dev
+    datasource:
+      url: jdbc:mysql://localhost:3306/workhub
+      username: ${db-user}
+      password: ${db-pw}
+      driver-class-name: com.mysql.cj.jdbc.Driver
+    jpa:
+      hibernate:
+        ddl-auto: none
+      properties:
+        hibernate:
+          show_sql: true
+          format_sql: true
+          dialect: org.hibernate.dialect.MySQLDialect
+
