--- a/chaewon/build.gradle
+++ b/chaewon/build.gradle
@@ -11,9 +11,11 @@ java {
 	sourceCompatibility = '17'
 }
 
+
 repositories {
 	mavenCentral()
 }
+
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -24,12 +26,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation('org.projectlombok:lombok')
 	annotationProcessor('org.projectlombok:lombok')
-
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	testImplementation('org.projectlombok:lombok')
 	testAnnotationProcessor('org.projectlombok:lombok')
-
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
