--- a/sungbin/mini/src/test/resources/application.yml
+++ b/sungbin/mini/src/test/resources/application.yml
@@ -24,4 +24,4 @@ spring:
       enabled: true
 api:
   secret:
-    key: "%2BHLHd3JdIwgJ1cWpRTNncZmVxOwTWC8NseENsHic%2FNhRbIzLhh%2FicN0edfGn25RZEzmigmFsCHmOa6tdeJJ2sQ%3D%3D"
+    key: ${SECRET_KEY}
